erDiagram
  Factory { string id }
  User { string id }
  UserFactoryAccess { string id }
  Buyer { string id }
  StyleModel { string id }
  PurchaseOrder { string id }
  POItem { string id }
  Material { string id }
  BOMHeader { string id }
  BOMItem { string id }
  InventoryTxn { string id }
  AuditLog { string id }
  SewingLine { string id }
  ProductionPlan { string id }
  PlanLine { string id }
  DailyTarget { string id }
  CuttingBatch { string id }
  Bundle { string id }
  SewingHourlyOutput { string id }
  QCInspection { string id }
  QCDefect { string id }

  Factory ||--o{ UserFactoryAccess : has
  User ||--o{ UserFactoryAccess : has
  Factory ||--o{ Buyer : has
  Factory ||--o{ StyleModel : has
  Factory ||--o{ PurchaseOrder : has
  Factory ||--o{ POItem : has
  Factory ||--o{ Material : has
  Factory ||--o{ BOMHeader : has
  Factory ||--o{ InventoryTxn : has
  Factory ||--o{ AuditLog : has
  Factory ||--o{ SewingLine : has
  Factory ||--o{ ProductionPlan : has
  Factory ||--o{ PlanLine : has
  Factory ||--o{ CuttingBatch : has
  Factory ||--o{ Bundle : has
  Factory ||--o{ SewingHourlyOutput : has
  Factory ||--o{ QCInspection : has
  Buyer ||--o{ PurchaseOrder : places
  PurchaseOrder ||--o{ POItem : contains
  StyleModel ||--o{ POItem : used_by
  StyleModel ||--o| BOMHeader : has
  BOMHeader ||--o{ BOMItem : contains
  Material ||--o{ BOMItem : used_in
  Material ||--o{ InventoryTxn : transacted_in
  User ||--o{ AuditLog : performs
  Material ||--o{ AuditLog : referenced_by
  ProductionPlan ||--o{ PlanLine : has
  PurchaseOrder ||--o{ PlanLine : includes
  POItem ||--o{ PlanLine : schedules
  SewingLine ||--o{ PlanLine : assigned_to
  PlanLine ||--o{ DailyTarget : has
  POItem ||--o{ CuttingBatch : cut_into
  CuttingBatch ||--o{ Bundle : contains
  POItem ||--o{ Bundle : from_item
  SewingLine ||--o{ SewingHourlyOutput : outputs
  Bundle ||--o{ SewingHourlyOutput : tracks
  Bundle ||--o{ QCInspection : inspected_in
  QCInspection ||--o{ QCDefect : has
